{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 466,
  "lineage": "cb061f0e-971e-3c48-2c39-fbdfd94ddf6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:security-group/sg-0056d4ff927163fdd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0056d4ff927163fdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "211622251997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster_sg"
            },
            "tags_all": {
              "Name": "eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:network-acl/acl-0b361d60cb4bade17",
            "default_network_acl_id": "acl-0b361d60cb4bade17",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b361d60cb4bade17",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211622251997",
            "subnet_ids": [
              "subnet-05358a2da385329bb",
              "subnet-06c30e4e0e9cbe102",
              "subnet-07a8906d6c7a13083",
              "subnet-07c5b374b062d9077",
              "subnet-09be0465049c5e6dd",
              "subnet-0c63118b96de88b19"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:route-table/rtb-0adf50d58c14725ab",
            "default_route_table_id": "rtb-0adf50d58c14725ab",
            "id": "rtb-0adf50d58c14725ab",
            "owner_id": "211622251997",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:security-group/sg-0a96483274a17ca5e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a96483274a17ca5e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211622251997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a321e828e64d8b6",
            "arn": "arn:aws:ec2:us-east-1:211622251997:elastic-ip/eipalloc-09a321e828e64d8b6",
            "domain": "vpc",
            "id": "eipalloc-09a321e828e64d8b6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-93-222-2.compute-1.amazonaws.com",
            "public_ip": "3.93.222.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096ba1b64f6a7d5a3",
            "arn": "arn:aws:ec2:us-east-1:211622251997:elastic-ip/eipalloc-096ba1b64f6a7d5a3",
            "domain": "vpc",
            "id": "eipalloc-096ba1b64f6a7d5a3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-144-231.compute-1.amazonaws.com",
            "public_ip": "34.238.144.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0352d2ae42785e32b",
            "arn": "arn:aws:ec2:us-east-1:211622251997:elastic-ip/eipalloc-0352d2ae42785e32b",
            "domain": "vpc",
            "id": "eipalloc-0352d2ae42785e32b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-87-67-223.compute-1.amazonaws.com",
            "public_ip": "54.87.67.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:internet-gateway/igw-0dfeb7cce1a2ebb44",
            "id": "igw-0dfeb7cce1a2ebb44",
            "owner_id": "211622251997",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a321e828e64d8b6",
            "association_id": "eipassoc-07becbb6b9cb5709c",
            "connectivity_type": "public",
            "id": "nat-09c09c38e8faa3d70",
            "network_interface_id": "eni-04f72e1f7e064995c",
            "private_ip": "10.0.101.145",
            "public_ip": "3.93.222.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a8906d6c7a13083",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096ba1b64f6a7d5a3",
            "association_id": "eipassoc-04c3272dc6d1e64e7",
            "connectivity_type": "public",
            "id": "nat-05188c256211b1445",
            "network_interface_id": "eni-0afbf23fa5013bbd6",
            "private_ip": "10.0.102.165",
            "public_ip": "34.238.144.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06c30e4e0e9cbe102",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0352d2ae42785e32b",
            "association_id": "eipassoc-090d84c74d6c4bb87",
            "connectivity_type": "public",
            "id": "nat-0a95ae362f570f436",
            "network_interface_id": "eni-0c714148fa04ff6c2",
            "private_ip": "10.0.103.107",
            "public_ip": "54.87.67.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07c5b374b062d9077",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c5203af6e388a07d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09c09c38e8faa3d70",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5203af6e388a07d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_nat_gateway.this",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-052c1ec421b01ee611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05188c256211b1445",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052c1ec421b01ee61",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_nat_gateway.this",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-077043dff916f342c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a95ae362f570f436",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077043dff916f342c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_nat_gateway.this",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dfeb7cce1a2ebb44",
            "id": "r-rtb-066d36e13cd905d321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066d36e13cd905d32",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:route-table/rtb-0c5203af6e388a07d",
            "id": "rtb-0c5203af6e388a07d",
            "owner_id": "211622251997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:route-table/rtb-052c1ec421b01ee61",
            "id": "rtb-052c1ec421b01ee61",
            "owner_id": "211622251997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:route-table/rtb-077043dff916f342c",
            "id": "rtb-077043dff916f342c",
            "owner_id": "211622251997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:route-table/rtb-066d36e13cd905d32",
            "id": "rtb-066d36e13cd905d32",
            "owner_id": "211622251997",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-074605b885a32e813"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065ae59367140d468",
            "route_table_id": "rtb-0c5203af6e388a07d",
            "subnet_id": "subnet-05358a2da385329bb"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04338955b5d724278",
            "route_table_id": "rtb-052c1ec421b01ee61",
            "subnet_id": "subnet-0c63118b96de88b19"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063bb4f1ba7a32728",
            "route_table_id": "rtb-077043dff916f342c",
            "subnet_id": "subnet-09be0465049c5e6dd"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cbf4e311fb309c4",
            "route_table_id": "rtb-066d36e13cd905d32",
            "subnet_id": "subnet-07a8906d6c7a13083"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba4fe5f4e266f8f8",
            "route_table_id": "rtb-066d36e13cd905d32",
            "subnet_id": "subnet-06c30e4e0e9cbe102"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e578fdeb87da4d4a",
            "route_table_id": "rtb-066d36e13cd905d32",
            "subnet_id": "subnet-07c5b374b062d9077"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:subnet/subnet-05358a2da385329bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05358a2da385329bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211622251997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:subnet/subnet-0c63118b96de88b19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c63118b96de88b19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211622251997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:subnet/subnet-09be0465049c5e6dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09be0465049c5e6dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211622251997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:subnet/subnet-07a8906d6c7a13083",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a8906d6c7a13083",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211622251997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:subnet/subnet-06c30e4e0e9cbe102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c30e4e0e9cbe102",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211622251997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:subnet/subnet-07c5b374b062d9077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c5b374b062d9077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211622251997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-074605b885a32e813"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:vpc/vpc-074605b885a32e813",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b361d60cb4bade17",
            "default_route_table_id": "rtb-0adf50d58c14725ab",
            "default_security_group_id": "sg-0a96483274a17ca5e",
            "dhcp_options_id": "dopt-03ac9c817d22d4e4c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074605b885a32e813",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adf50d58c14725ab",
            "owner_id": "211622251997",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:security-group/sg-0f49e7d007ab42190",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f49e7d007ab42190",
            "ingress": [],
            "name": "my-eks-cluster-cluster-20240825130555651000000004",
            "name_prefix": "my-eks-cluster-cluster-",
            "owner_id": "211622251997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05322bf757c9b2f06"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211622251997:security-group/sg-0ca76c095abd5684a",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0ca76c095abd5684a",
            "ingress": [],
            "name": "my-eks-cluster-node-20240825130555641300000001",
            "name_prefix": "my-eks-cluster-node-",
            "owner_id": "211622251997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05322bf757c9b2f06"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3172530231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f49e7d007ab42190",
            "security_group_rule_id": "sgr-0882ab21439806bbf",
            "self": false,
            "source_security_group_id": "sg-0ca76c095abd5684a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-81849115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-01addaea8e06f0aca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2714805284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-00bed4794050ca071",
            "self": false,
            "source_security_group_id": "sg-0f49e7d007ab42190",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-4033211728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-01e5caff065c72ddd",
            "self": false,
            "source_security_group_id": "sg-0f49e7d007ab42190",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-958892742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-0eec09564f8b09c4b",
            "self": false,
            "source_security_group_id": "sg-0f49e7d007ab42190",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-712750823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-0980ed71a0fe317ab",
            "self": false,
            "source_security_group_id": "sg-0f49e7d007ab42190",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1322943788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-089322a3f184c4a19",
            "self": false,
            "source_security_group_id": "sg-0f49e7d007ab42190",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-256913069",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-0e678d0f0df0af363",
            "self": false,
            "source_security_group_id": "sg-0f49e7d007ab42190",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4213617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-029feefa0c005739a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-13962699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-04b74b995200dedb0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2760551972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0ca76c095abd5684a",
            "security_group_rule_id": "sgr-04523254ea11fe58e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "module.aws_vpc.aws_vpc.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}